Striped down everything to start anew