@@ -1,47 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.arcbees</groupId>
-    <artifactId>arcbeeswebsite</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>website</artifactId>
+    <version>3.0-SNAPSHOT</version>
     <packaging>war</packaging>
-    <name>MyProject</name>
+    <name>Arcbees Website</name>
 
     <properties>
-        <target.jdk>1.6</target.jdk>
+        <target.jdk>1.7</target.jdk>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
         <maven-surefire-plugin.version>2.6</maven-surefire-plugin.version>
         <maven-compiler-plugin.version>2.3.2</maven-compiler-plugin.version>
         <maven-gae-plugin.version>0.9.5</maven-gae-plugin.version>
-        <gwt-maven-plugin.version>2.5.0</gwt-maven-plugin.version>
+        <gwt-maven-plugin.version>2.6.1</gwt-maven-plugin.version>
 
-        <gwt.version>2.5.0</gwt.version>
-        <gae.version>1.7.4</gae.version>
-        <gwtp.version>0.8-alpha-2</gwtp.version>
-        <arcbees-core.version>1.0-SNAPSHOT</arcbees-core.version>
-        <gwtquery-version>1.2.0</gwtquery-version>
+        <gwt.version>2.6.1</gwt.version>
+        <gae.version>1.9.9</gae.version>
+        <gwtp.version>1.3</gwtp.version>
         <guice.version>3.0</guice.version>
-        <gin.version>2.0.0</gin.version>
-        <jukito.version>1.1</jukito.version>
-        <junit.version>4.10</junit.version>
+        <gin.version>2.1.2</gin.version>
 
         <webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
     </properties>
-
-    <repositories>
-        <repository>
-            <id>sonatype.snapshots</id>
-            <name>Sonatype snapshot repository</name>
-            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-            <snapshots>
-            </snapshots>
-        </repository>
-    </repositories>
 
     <dependencies>
         <!-- Google Web Toolkit dependencies -->
@@ -52,13 +38,6 @@
             <scope>provided</scope>
         </dependency>
 
-        <dependency>
-            <groupId>com.google.gwt</groupId>
-            <artifactId>gwt-servlet</artifactId>
-            <version>${gwt.version}</version>
-            <scope>runtime</scope>
-        </dependency>
-
         <!-- GWT-Platform dependencies -->
         <dependency>
             <groupId>com.gwtplatform</groupId>
@@ -67,110 +46,18 @@
             <scope>provided</scope>
         </dependency>
 
-        <dependency>
-            <groupId>com.gwtplatform</groupId>
-            <artifactId>gwtp-dispatch-client</artifactId>
-            <version>${gwtp.version}</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.gwtplatform</groupId>
-            <artifactId>gwtp-dispatch-server-guice</artifactId>
-            <version>${gwtp.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.gwtplatform</groupId>
-            <artifactId>gwtp-dispatch-shared</artifactId>
-            <version>${gwtp.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.gwtplatform</groupId>
-            <artifactId>gwtp-processors</artifactId>
-            <version>${gwtp.version}</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.gwtplatform</groupId>
-            <artifactId>gwtp-crawler</artifactId>
-            <version>${gwtp.version}</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.gwtplatform</groupId>
-            <artifactId>gwtp-tester</artifactId>
-            <version>${gwtp.version}</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.arcbees.core</groupId>
-            <artifactId>arcbees-core</artifactId>
-            <version>${arcbees-core.version}</version>
-            <scope>provided</scope>
-        </dependency>
-
         <!-- DI dependencies -->
-        <dependency>
-            <groupId>com.google.inject</groupId>
-            <artifactId>guice</artifactId>
-            <version>${guice.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.google.inject.extensions</groupId>
-            <artifactId>guice-servlet</artifactId>
-            <version>${guice.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.google.inject.extensions</groupId>
-            <artifactId>guice-assistedinject</artifactId>
-            <version>${guice.version}</version>
-        </dependency>
-
         <dependency>
             <groupId>com.google.gwt.inject</groupId>
             <artifactId>gin</artifactId>
             <version>${gin.version}</version>
             <scope>provided</scope>
         </dependency>
-
-        <!-- Test dependencies -->
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>${junit.version}</version>
-            <scope>test</scope>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+            <version>${guice.version}</version>
         </dependency>
-
-        <dependency>
-            <groupId>org.jukito</groupId>
-            <artifactId>jukito</artifactId>
-            <version>${jukito.version}</version>
-            <scope>test</scope>
-        </dependency>
-
-        <!-- Other dependencies -->
-
-        <dependency>
-            <groupId>com.googlecode.gwtquery</groupId>
-            <artifactId>gwtquery</artifactId>
-            <version>${gwtquery-version}</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <!-- Google App Engine dependencies -->
-        <dependency>
-            <groupId>com.google.appengine</groupId>
-            <artifactId>appengine-api-1.0-sdk</artifactId>
-            <version>${gae.version}</version>
-        </dependency>
-
     </dependencies>
 
     <build>
@@ -183,27 +70,28 @@
                 <artifactId>gwt-maven-plugin</artifactId>
                 <version>${gwt-maven-plugin.version}</version>
 
+                <configuration>
+                    <testTimeOut>180</testTimeOut>
+                    <includes>**/*GwtTest.java</includes>
+                    <mode>htmlunit</mode>
+                    <gen>gen</gen>
+
+                    <extraJvmArgs>-Xss1024K -Xmx1024M -XX:MaxPermSize=512M</extraJvmArgs>
+                    <logLevel>INFO</logLevel>
+
+                    <copyWebapp>true</copyWebapp>
+                    <hostedWebapp>${webappDirectory}</hostedWebapp>
+                </configuration>
                 <executions>
                     <execution>
-                        <phase>prepare-package</phase>
                         <goals>
+                            <goal>resources</goal>
                             <goal>compile</goal>
+                            <goal>test</goal>
                         </goals>
                     </execution>
                 </executions>
 
-                <configuration>
-                    <appEngineVersion>${gae.version}</appEngineVersion>
-                    <server>com.google.appengine.tools.development.gwt.AppEngineLauncher</server>
-
-                    <bindAddress>localhost</bindAddress>
-                    <runTarget>Hive.html</runTarget>
-                    <extraJvmArgs>-Xmx512m -Xss1024k</extraJvmArgs>
-                    <extraParam>true</extraParam>
-                    <extra>extras</extra>
-                    <hostedWebapp>${webappDirectory}</hostedWebapp>
-                    <copyWebapp>true</copyWebapp>
-                </configuration>
             </plugin>
 
             <plugin>
@@ -218,66 +106,6 @@
                     <proc>none</proc>
                 </configuration>
             </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>${maven-surefire-plugin.version}</version>
-                <configuration>
-                    <includes>
-                        <include>**/*Test.java</include>
-                        <include>**/*TestCase.java</include>
-                    </includes>
-                    <excludes>
-                        <exclude>**/*GwtTest.java</exclude>
-                    </excludes>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>net.kindleit</groupId>
-                <artifactId>maven-gae-plugin</artifactId>
-                <version>${maven-gae-plugin.version}</version>
-                <configuration>
-                    <unpackVersion>${gae.version}</unpackVersion>
-                    <serverId>appengine-credentials</serverId>
-                </configuration>
-
-                <executions>
-                    <execution>
-                        <phase>validate</phase>
-                        <goals>
-                            <goal>unpack</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>deploy</id>
-                        <goals>
-                            <goal>deploy</goal>
-                        </goals>
-                    </execution>
-                </executions>
-
-                <dependencies>
-                    <dependency>
-                        <groupId>net.kindleit</groupId>
-                        <artifactId>gae-runtime</artifactId>
-                        <version>1.6.3</version>
-                        <type>pom</type>
-                    </dependency>
-                </dependencies>
-            </plugin>
         </plugins>
     </build>
-
-    <distributionManagement>
-        <repository>
-            <id>local-target</id>
-            <url>file://${project.build.directory}/distribution/release</url>
-        </repository>
-        <snapshotRepository>
-            <id>local-target</id>
-            <url>file://${project.build.directory}/distribution/snapshots</url>
-        </snapshotRepository>
-    </distributionManagement>
 </project>
